--- a/actions/docker-compose.yml
+++ b/actions/docker-compose.yml
@@ -1,8 +1,10 @@
-version: '3.4'
+version: "3.4"
 
 services:
-  githubactions:
-    image: githubactions
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+    githubactions:
+        image: githubactions
+        build:
+            context: .
+            dockerfile: ./Dockerfile
+        env:
+            MY_NAME: "Phuoc"
