--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - uses: ./actions/1
+            - uses: ./.github/actions/1
               with:
                   MY_NAME: "Phuoc"
